fix flag and collapse buttons in comment

--- a/app/components/cards/Comment.scss
+++ b/app/components/cards/Comment.scss
@@ -69,7 +69,7 @@
   }
 }
 
-.Comment:hover > .Comment__header > .Comment__header_collapse {
+.Comment:hover .Comment__header .Comment__header_collapse {
   visibility: visible;
 }
 
